# neon

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.lua  install.sh
.github/workflows/: ci.yml  release.yml
configs/onboarding/: config.lua  interface.lua  provider.lua
configs/onboarding/questions/: aesthetics.lua  introduction.lua  personalization.lua  providers.lua
configs/preset/: agent.lua  cli.lua  config.lua  sessions.lua
configs/preset/interface/: init.lua  plain.lua  tui.lua
configs/preset/providers/: anthropic.lua  init.lua  openai.lua
configs/preset/tools/: bash.lua  init.lua  web_fetch.lua  web_text.lua
configs/themes/: catppuccin_mocha.lua  init.lua  tokyo_night.lua
docs/: INDEX.md  INSTALLATION.md  TROUBLESHOOTING.md
docs/API/: BLESSING.md  INDEX.md  LUA.md  RUST.md  SESSION.md  TOOL_SPEC_FORMAT.md
docs/api/: INDEX.md  LUA.md  RESULT_SHAPES.md
docs/api/blessing/: EFFECTS.md  INDEX.md  TUI.md
examples/blessing/: blessing_ui.lua  config.lua
examples/simple/: config.lua
src/: blessing.rs  lib.rs  main.rs  net.rs  runtime.rs  session.rs  sqlite.rs  tachyonfx.rs  tools.rs  util.rs
tests/: smoke.rs
website/: Cargo.toml
website/src/: main.rs
website/static/: index.html  style.css
