[package]
name = "neon"
version = "0.1.0"
edition = "2021"

[features]
default = ["blessing"]
blessing = ["dep:ratatui", "dep:tachyonfx"]

[dependencies]
mlua = { version = "0.10", features = ["lua54", "vendored"] }
once_cell = "1"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "process", "rt-multi-thread", "time"] }
ratatui = { version = "0.29", default-features = false, features = ["crossterm"], optional = true }
tachyonfx = { version = "0.25", optional = true }

[dev-dependencies]
tempfile = "3"

[lib]
name = "neon"
path = "src/lib.rs"

[[bin]]
name = "neon"
path = "src/main.rs"
